--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@
 *.js filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.scss filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
