--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 *.scss filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+/dist/img/additionalServices/backgroundCartItem1jpg filter=lfs diff=lfs merge=lfs -text
